--- a/skill.html
+++ b/skill.html
@@ -44,7 +44,7 @@
                 <div style="width: 100%" class="list-assignment-item">
                   <a
                     style="display: flex; flex-direction: row"
-                    href="https://github.com/AndrewDongminYoo/ranker"
+                    href="https://github.com/code-bootcamp/Youth_n_Luxury_client"
                     class="item-content"
                   >
                     <div
@@ -61,32 +61,24 @@
                       </span>
                       <h4 class="title">Youth & Luxury 명품 중고마켓</h4>
                       <div class="markdown github">
-                        <p>
-                          Python 3.10, Django 4.0, MySQL 8(AWS RDS),
-                          Django-ninja, BeautifulSoup4 4.10 사용했습니다.<br />
-                          Django ORM을 활용해 객체지향 프로그래밍. Q, F, Count
-                          등의 서브쿼리 메소드 적극 혼용해 쿼리를
-                          최적화했습니다. Django DRF 보다 12배 빠른 속도를
-                          보장하는 Django Ninja 사용했고, api 반응 속도 뿐만
-                          아니라 swagger ui를 제공해 빠르고 쉽게 개발이
-                          가능했습니다. 또한 pydantic 기반으로 동적 타입을 가진
-                          파이썬의 데이터 타입을 제한해 데이터 모델의 일관성
-                          보장해 줍니다.<br />
-                          안정적인 화면 렌더링을 위해 Django template을 사용한
-                          데이터 그룹핑 + lodash를 이용한 데이터 그룹핑 적절히
-                          혼합해 사용했습니다.<br />
-                          Django-crontab을 이용해 EC2 환경에서 정기적으로 모바일
-                          어플리케이션 마켓을 크롤링했습니다.<br />
-                          관계 부서(애드네트워크 사업부)와 계속해서 수집 데이터
-                          형식 및 수집 기간 조율하여 Slack 봇 개설. 애플리케이션
-                          순위 변동 사항 등을 정기적으로 체크했습니다.
-                        </p>
+                        <p> Graph-ql 활용한 데이터 처리 </p>
+                        <p> 사용자 신뢰를 위한 실계좌 조회 OPEN-API 적용 </p>
+                        <p> 다음 포스트코드를 활용한 주소 등록 및 조회 </p>
+                        <p> 아임 포트를 활용한 결제 시스템 구현 </p>
+                        <p> Docker 및 GCP 배포 </p>
                       </div>
                       <ul class="tags">
-                        <li class="tag">Django</li>
-                        <li class="tag">Django-ninja</li>
-                        <li class="tag">Django ORM</li>
-                        <li class="tag">Django-crontab</li>
+                        <li class="tag">React</li>
+                        <li class="tag">Next.js</li>
+                        <li class="tag">JavaScript</li>
+                        <li class="tag">TypeScript</li>
+                        <li class="tag">Graph-ql</li>
+                        <li class="tag">Axios</li>
+                        <li class="tag">Emotion</li>
+                        <li class="tag">Git</li>
+                        <li class="tag">GitHub</li>
+                        <li class="tag">GCP</li>
+                        <li class="tag">Docker</li>
                       </ul>
                     </div>
                   </a>
@@ -112,18 +104,23 @@
                       <h4 class="title">Share Ground</h4>
                       <div class="markdown github">
                         <p>
-                          게시판 CRUD, 중고마켓 기반 상거래, 카카오 map API 기능
-                          구현
+                          자유 게시판, 중고 마켓 거래 기능 구현
                         </p>
                         <p>오픈 API 이용 국가별 환율 조회</p>
                         <p>Docker 및 GCP 배포</p>
                       </div>
                       <ul class="tags">
+                        <li class="tag">React</li>
+                        <li class="tag">Next.js</li>
                         <li class="tag">JavaScript</li>
                         <li class="tag">TypeScript</li>
                         <li class="tag">Graph-ql</li>
                         <li class="tag">Axios</li>
                         <li class="tag">Emotion</li>
+                        <li class="tag">Git</li>
+                        <li class="tag">GitHub</li>
+                        <li class="tag">GCP</li>
+                        <li class="tag">Docker</li>
                       </ul>
                     </div>
                   </a>
@@ -131,7 +128,7 @@
                 <div style="width: 100%" class="list-assignment-item">
                   <a
                     style="display: flex; flex-direction: row"
-                    href="https://github.com/AndrewDongminYoo/my-small-meal"
+                    href="https://github.com/kwonjihyeon2/kanu_onepage"
                     class="item-content"
                   >
                     <div
@@ -149,38 +146,17 @@
                         >
                       </span>
                       <h4 class="title">
-                        1인분 배달 추천 사이트 오늘 뭐 먹지?
+                        카누 웹사이트 리뉴얼 및 랜딩 페이지
                       </h4>
                       <div class="markdown github">
                         <p>
-                          부트캠프의 첫 팀 프로젝트. 팀장을 맡게되어, 저처럼
-                          혼자 사는 1인 가구를 위한 배달 음식점 소개 어플을
-                          만들고자 했습니다.<br />
-                          요기요 API를 차용하여 파이썬 플라스크에서 데이터를
-                          받아 클라이언트 사이드 렌더링하는 싱글 페이지
-                          어플리케이션을 만들었습니다.<br />
-                          간단한 프로젝트였지만, 다양한 외부 API를 사용하고
-                          NoSQL인 MonogoDB를 통해 유저데이터와 음식점
-                          데이터베이스를 관리, 또 깃허브 액션 기능을 이용해
-                          마스터 브랜치 푸시에 따라 AWS ElasticBeanstalk를 통해
-                          배포되도록 하는 과정을 배웠습니다.<br />
-                          또한 LightHouse 같은 성능측정도구를 통해 프론트
-                          페이지의 성능 지표를 분석하고, 이 과정에서 많은 시간을
-                          소요하는 API를 분석해 개선하는 작업을 해 보았습니다.
+                            부트스트랩 및 HTML/ CSS 활용 반응형 웹사이트 퍼블리싱
                         </p>
                       </div>
                       <ul class="tags">
-                        <li class="tag">Flask</li>
-                        <li class="tag">MongoDB</li>
-                        <li class="tag">AWS</li>
-                        <li
-                          class="tag"
-                          data-placement="top"
-                          data-toggle="tooltip"
-                          data-original-title="Tensorflow"
-                        >
-                          CloudFront
-                        </li>
+                        <li class="tag">HTML</li>
+                        <li class="tag">CSS</li>
+                        <li class="tag">JavaScript</li>
                       </ul>
                     </div>
                   </a>
