--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
                 <div class="">
                   <p>
                     전래동화 토끼와 거북이의 거북이처럼 목표를 이루기 위해
-                    느리더라도 꾸준히 한 걸음씩 나아가고 있습니다. 문제를
-                    직면했을 때 여러 가지 방식을 시도하고 해결을 위해 몇
-                    번이라도 시행착오를 반복하는 끈기를 가지고 있습니다.
+                    느리더라도 꾸준히 한 걸음씩 나아가고 있습니다. 부트캠프 수강 초기에는 블랙홀이라고 불리기도 했지만 두 달 뒤 팀 프로젝트에서 팀장을 맡아 프로젝트를 이끌기도 했습니다. 꾸준히 성장하는 개발자가 되기 위해 노력합니다.
                   </p>
                 </div>
               </div>
@@ -264,30 +262,24 @@
                   </div>
                   <div class="resume-card-right">
                     <h4 class="resume-card-item-label">
-                      1. 소통의 끝은 새로운 발전의 시작이라고 생각합니다.
+                      1. 소통의 끝은 새로운 성장의 기회이라고 생각합니다.
                     </h4>
                     <div class="markdown github markdown-viewer">
                       <div>
                         <p></p>
                         <p>
-                          지난 6년간 인천 공항에 근무하면서 의사소통 과정에서
-                          의도하지 않았지만 문화가 달라서 오해를 빚거나 정해진
-                          시간 내에 업무를 빠르게 진행하면서 동료들과 예상치
-                          못한 문제가 발생하기도 했지만 반대로 말 한마디로
-                          민원인의 오해를 원만하게 처리할 수도 있었습니다.
-                          공항에서의 6년이라는 시간은 저에게 의사소통 능력이라는
-                          값진 발전을 가져다주었습니다.
+                          지난 6년간 인천 공항에 근무하면서 정해진 시간 내에 업무를 진행하면서 소통의 오류로 동료들과 예상치 못한 문제가 발생하기도 했고, 반대로 말 한마디로 민원인의 오해를 원만하게 처리할 수도 있었습니다. 그 시간은 저에게 의사소통 능력이라는 값진 능력을 가져다주었습니다.
                         </p>
                         <p>
-                          부트캠프 팀 프로젝트 진행 중 다른 직군과의 협업에서
+                          부트캠프 팀 프로젝트 진행 중 백엔드와의 협업에서
                           의사소통의 중요성을 또 한 번 깨달았습니다. 명품이라는
                           주제로 진행하는 프로젝트 특성상 결제 시스템의 안정성을
                           높여야 한다고 생각했던 저는 구매자가 구매 확정을 한 후
-                          판매자에게 결제 완료를 알리는 방식을 원하다 보니 데이터 처리와 관련해서 벡엔드 동기와의 의견 차이가 있었습니다. 구매 확정
+                          판매자에게 결제 완료를 알리는 방식을 원했고, 백엔드에서는 결제가 진행되는 순간 관련 데이터가 저장되어야 해서 구매 확정을 기다리는 동안 데이터를 처리하는 과정에 어려움이 있다는 의견 차이가 있었습니다. 구매 확정
                           전까지 관리자 계정을 통해 결제를 진행하는 방식으로
                           절충안을 내기까지 하루에 2번 이상의 회의를 거치곤
                           했습니다. 하지만 타 직군에 대해 조금 더 이해하고
-                          협업하는 게 무엇인지 확실히 느끼게 된 값진
+                          협업이 무엇인지 확실히 느끼게 된 값진
                           경험이었습니다.
                         </p>
                       </div>
@@ -299,7 +291,7 @@
                       <div>
                         <p></p>
                         <p>
-                          부트캠프를 수강하면서 단지 코드를 이해하고 잘 짜인
+                          부트캠프를 수강하면서 단지 코드를 이해하고 잘 짜여진
                           코드를 따라 할 수 있으면 된다고 생각했었습니다. 여러
                           가지 기능들을 숙지하고 구현하는 과정에서 global
                           state를 무더기로 넣어 이미 들어간 다른 데이터에 영향을
@@ -402,19 +394,10 @@
                       <li class="list-contribution-item">
                         <i class="fas fa-comment"> 기능 GIF </i>
                         <a
-                          href="https://holly-legume-3d3.notion.site/Youth-Luxury-6e89d4cd266144788c5f84d4c9720e36"
+                          href="https://holly-legume-3d3.notion.site/Youth-Luxury-453b45f6c5a946569d4695218a6355f9"
                           target="_blank"
                           rel="noopener"
-                          >https://holly-legume-3d3.notion.site/Youth-Luxury-6e89d4cd266144788c5f84d4c9720e36
-                        </a>
-                      </li>
-                      <li class="list-contribution-item">
-                        <i class="fas fa-comment"> 프로젝트 노션 </i>
-                        <a
-                          href="https://dingco.notion.site/5-SOS-Sink-Or-Swim-bfdc2f94a1d84a4c9c2c334ddfafa705"
-                          target="_blank"
-                          rel="noopener"
-                          >https://dingco.notion.site/5-SOS-Sink-Or-Swim-bfdc2f94a1d84a4c9c2c334ddfafa705
+                          >https://holly-legume-3d3.notion.site/Youth-Luxury-453b45f6c5a946569d4695218a6355f9
                         </a>
                       </li>
                     </ul>
@@ -494,10 +477,10 @@
                       <li class="list-contribution-item">
                         <i class="fas fa-comment"> 기능 GIF </i>
                         <a
-                          href="https://holly-legume-3d3.notion.site/Share-Ground-908384390f4d4abeb61bbb60fb28aeeb"
+                          href="https://holly-legume-3d3.notion.site/Share-Ground-8203bac3918e4e68a151886fff65e60a"
                           target="_blank"
                           rel="noopener"
-                          >https://holly-legume-3d3.notion.site/Share-Ground-908384390f4d4abeb61bbb60fb28aeeb
+                          >https://holly-legume-3d3.notion.site/Share-Ground-8203bac3918e4e68a151886fff65e60a
                         </a>
                       </li>
                     </ul>
@@ -576,54 +559,12 @@
                     <h5 class="resume-card-item-period">2022-04 ~</h5>
                   </div>
                   <div class="resume-card-right">
-                    <h4 class="resume-card-item-label">
-                      사이드 프로젝트 및 부족한 기술 공부
-                    </h4>
-                    <h5 class="resume-card-item-text">오늘의 친구</h5>
-                    <div class="markdown github markdown-viewer">
-                      <div>
-                        <div>
-                          <p>
-                            2022년 5월부터 부족한 기술 보완을 위한 사이드
-                            프로젝트 진행 중.
-                          </p>
-                        </div>
-                      </div>
-                    </div>
+                    <h4 class="resume-card-item-label">코드 리펙토링 및 개인 기술 공부</h4>
                     <ul class="list-contributions">
                       <li class="list-contribution-item">
                         <h5 class="part-title">
-                          친목 어플리케이션
+                          최신 기술을 활용한 사이드 프로젝트 진행
                         </h5>
-                        <div>
-                          <ul style="list-style-type: circle">
-                            <li>
-                              <i class="fas fa-comment"></i>
-                                <a
-                                  href="https://www.notion.so/3038f3d672ad437d85e94cd25a922b12"
-                                  target="_blank"
-                                  rel="noopener"
-                                  >https://www.notion.so/3038f3d672ad437d85e94cd25a922b12</a
-                                >
-                            </li>
-                            <li>
-                              <i class="fab fa-github"></i>
-                                <a
-                                  href="https://github.com/kwonjihyeon2/today-friends-client"
-                                  target="_blank"
-                                  rel="noopener"
-                                  >https://github.com/kwonjihyeon2/today-friends-client
-                                </a>
-                            </li>
-                            <li>
-                              메인 기술 스택 ― React-Native, Axios
-                            </li>
-                            <li>
-                              카카오 MAP API 이용 유저 위치 근처 친구 추천 기능 구현 예정
-                            </li>
-                            
-                          </ul>
-                        </div>
                       </li>
                       <li class="list-contribution-item">
                         <h5 class="part-title">
