--- a/skill.html
+++ b/skill.html
@@ -44,13 +44,13 @@
                 <div style="width: 100%" class="list-assignment-item">
                   <a
                     style="display: flex; flex-direction: row"
-                    href="https://github.com/code-bootcamp/Youth_n_Luxury_client"
+                    href="https://holly-legume-3d3.notion.site/Youth-Luxury-453b45f6c5a946569d4695218a6355f9"
                     class="item-content"
                   >
                     <div
                       class="img-thumb"
                       style="
-                        background: url('https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FnEIe9%2FbtrvtBxj4pR%2FIiMr7LCq2oiu9vdupzIIX0%2Fimg.png')
+                        background: url('./youthluxuly.png')
                           no-repeat center;
                         background-size: cover;
                       "
@@ -86,7 +86,7 @@
                 <div style="width: 100%" class="list-assignment-item">
                   <a
                     style="display: flex; flex-direction: row"
-                    href="https://github.com/kwonjihyeon2/codecamp-frontend-05"
+                    href="https://holly-legume-3d3.notion.site/Share-Ground-8203bac3918e4e68a151886fff65e60a"
                     class="item-content"
                   >
                     <div
@@ -101,13 +101,24 @@
                       <span>
                         <span class="badge practice">개인 프로젝트</span>
                       </span>
-                      <h4 class="title">Share Ground</h4>
+                      <h4 class="title">Share Ground - 자유 게시판, 중고 마켓</h4>
                       <div class="markdown github">
-                        <p>
-                          자유 게시판, 중고 마켓 거래 기능 구현
-                        </p>
                         <p>오픈 API 이용 국가별 환율 조회</p>
-                        <p>Docker 및 GCP 배포</p>
+                        <p>
+                          Query Parameter 활용한 검색 기능 구현
+                        </p>
+                        <p>
+                          다음 포스트코드를 활용한 주소 등록 및 조회
+                        </p>
+                        <p>
+                          카카오 지도 API를 활용한 위치 기능 구현
+                        </p>
+                        <p>
+                          아임 포트를 활용한 결제 시스템 구현
+                        </p>
+                        <p>
+                          Docker 및 GCP 배포
+                        </p>
                       </div>
                       <ul class="tags">
                         <li class="tag">React</li>
@@ -128,14 +139,14 @@
                 <div style="width: 100%" class="list-assignment-item">
                   <a
                     style="display: flex; flex-direction: row"
-                    href="https://github.com/kwonjihyeon2/kanu_onepage"
+                    href="https://holly-legume-3d3.notion.site/24d71764594c4ac0b88b9032646950b5"
                     class="item-content"
                   >
                     <div
                       class="img-thumb"
                       style="
-                        background: url('https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FyeBSk%2FbtriaQHaNqv%2FPqCom0cFhmAZJpcFYswuN1%2Fimg.png')
-                          no-repeat center;
+                        background: url('./KANU.png')
+                          no-repeat top;
                         background-size: cover;
                       "
                     ></div>
