--- a/index.html
+++ b/index.html
@@ -175,85 +175,6 @@
             </footer>
           </div>
           <div class="resume__detail">
-            <section class="resume-card timeline shrinked">
-              <div class="resume-card-header" style="width: 6rem">
-                <div class="resume-card-left">
-                  <h4 class="resume-card-header-title">타임라인</h4>
-                </div>
-                <div class="resume-card-right"></div>
-              </div>
-              <div class="resume-card-body" style="width: calc(100% - 9rem)">
-                <div class="resume-card-item">
-                  <div class="timeline-wrap">
-                    <div class="timeline-period">
-                      <span class="resume-card-item-label">
-                        서비스업 경력 약 6년 + 개발자 준비기간 10개월
-                      </span>
-                    </div>
-                    <div class="grid-timeline-wrap">
-                      <div
-                        class="grid-timeline-labels"
-                        style="grid-template-columns: repeat(12, 1fr)"
-                      >
-                        <div class="label-year">15.</div>
-                        <div class="label-year">16.</div>
-                        <div class="label-year">17.</div>
-                        <div class="label-year">18.</div>
-                        <div class="label-year">19.</div>
-                        <div class="label-year">20.</div>
-                        <div class="label-year">21.05</div>
-                        <div class="label-year">21.07</div>
-                        <div class="label-year">21.09</div>
-                        <div class="label-year">21.11</div>
-                        <div class="label-year">22.01</div>
-                        <div class="label-year">22.05</div>
-                      </div>
-                      <div class="grid-timeline">
-                        <div
-                          data-original-title=""
-                          data-content='비개발 경력 6년lt;h6 class="text-mute"&gt;2015.07~2022.05&lt;/h6&gt;'
-                          data-html="true"
-                          data-toggle="popover"
-                          data-placement="top"
-                          class="event-item experience"
-                          style="
-                            grid-column: 1 / 58;
-                            color: #eee;
-                            background-color: #44576c;
-                          "
-                        >
-                          <span
-                            >대학교 졸업 후 인천공항 근무(2015.07~2021.05)</span
-                          >
-                        </div>
-                        <div
-                          data-original-title=""
-                          data-content='개발 공부 1년&lt;h6 class="text-mute"&gt;2022-01~2021-05&lt;/h6&gt;'
-                          data-html="true"
-                          data-toggle="popover"
-                          data-placement="top"
-                          class="event-item experience"
-                          style="
-                            grid-column: 58 / 100;
-                            background-color: #eee;
-                            color: #44576c;
-                          "
-                        >
-                          <i class="fab fa-html5"></i>
-                          <i class="fab fa-css3-alt"></i>
-                          <i class="fab fa-js-square"></i>
-                          <i class="fab fa-react"></i>
-                          <i class="fab fa-figma"></i>
-                          <i class="fab fa-git"></i>
-                          <i class="fab fa-docker"></i>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="resume-card-footer"></div>
-            </section>
             <section class="resume-card">
               <div class="resume-card-body">
                 <div class="resume-card-item activity">
@@ -284,12 +205,12 @@
                         </p>
                       </div>
                     </div>
+                    <br />
                     <h4 class="resume-card-item-label">
-                      2. 한 줄의 코드라도 이유 있는 코드를 지향합니다.
+                      2. 하나의 기능이라도 스스로 직접 구현하려는 자세를 가지고 있습니다. 
                     </h4>
                     <div class="markdown github markdown-viewer">
                       <div>
-                        <p></p>
                         <p>
                           부트캠프를 수강하면서 단지 코드를 이해하고 잘 짜여진
                           코드를 따라 할 수 있으면 된다고 생각했었습니다. 여러
@@ -373,15 +294,7 @@
                       <li class="list-contribution-item">
                         역할 ― 팀장 및 프로젝트 노션 회의록 기록 담당
                       </li>
-                      <li class="list-contribution-item">
-                        <i class="fas fa-desktop"></i>
-                        <a
-                          href="https://www.youth-luxury.shop"
-                          target="_blank"
-                          rel="noopener"
-                          >https://www.youth-luxury.shop
-                        </a>
-                      </li>
+                      
                       <li class="list-contribution-item">
                         <i class="fab fa-github"></i>
                         <a
