--- a/skill.html
+++ b/skill.html
@@ -86,13 +86,13 @@
                 <div style="width: 100%" class="list-assignment-item">
                   <a
                     style="display: flex; flex-direction: row"
-                    href="https://holly-legume-3d3.notion.site/Share-Ground-8203bac3918e4e68a151886fff65e60a"
+                    href="https://github.com/kwonjihyeon2/codecamp-frontend-05"
                     class="item-content"
                   >
                     <div
                       class="img-thumb"
                       style="
-                        background: url('https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FQvukx%2FbtrpxwzLynY%2F8ZdENGbINruD2b8028ktpK%2Fimg.png')
+                        background: url('./share-ground.png')
                           no-repeat center;
                         background-size: cover;
                       "
