--- a/skill.html
+++ b/skill.html
@@ -61,7 +61,7 @@
                       </span>
                       <h4 class="title">Youth & Luxury 명품 중고마켓</h4>
                       <div class="markdown github">
-                        <p> Graph-ql 활용한 데이터 처리 </p>
+                        <p> GraphQL을 활용한 서버와의 데이터 통신 </p>
                         <p> 사용자 신뢰를 위한 실계좌 조회 OPEN-API 적용 </p>
                         <p> 다음 포스트코드를 활용한 주소 등록 및 조회 </p>
                         <p> 아임 포트를 활용한 결제 시스템 구현 </p>
@@ -103,9 +103,9 @@
                       </span>
                       <h4 class="title">Share Ground - 자유 게시판, 중고 마켓</h4>
                       <div class="markdown github">
-                        <p>오픈 API 이용 국가별 환율 조회</p>
+                        <p>JWT token을 이용한 로그인 및 권한 분기</p>
                         <p>
-                          Query Parameter 활용한 검색 기능 구현
+                          Debounce, Query Parameter 활용한 검색 기능 구현
                         </p>
                         <p>
                           다음 포스트코드를 활용한 주소 등록 및 조회
