--- a/index.html
+++ b/index.html
@@ -279,10 +279,13 @@
                             아임 포트를 활용한 결제 시스템 구현
                           </li>
                           <li>
-                            Graph-ql 활용한 데이터 처리
+                            GraphQL을 활용한 서버와의 데이터 통신
                           </li>
                           <li>
                             다음 포스트코드를 활용한 주소 등록 및 조회
+                          </li>
+                          <li>
+                            상품 상세 페이지 SNS(카카오톡) 공유 기능 구현
                           </li>
                           <li>
                             Docker 및 GCP 배포
@@ -344,22 +347,25 @@
                       <div>
                         <ul style="list-style-type: circle">
                           <li>
-                            OPEN-API를 활용한 국가별 환율 조회 구현 
+                            JWT token을 이용한 로그인 및 권한 분기
                           </li>
                           <li>
-                            Query Parameter 활용한 검색 기능 구현
+                            Debounce, Query Parameter 활용한 검색 기능 구현
                           </li>
                           <li>
-                            Graph-ql 활용한 데이터 처리
+                            GraphQL을 활용한 서버와의 데이터 통신
+                          </li>
+                          <li>
+                            무한 스크롤, pagination을 이용한 데이터 조회
+                          </li>
+                          <li>
+                            아임 포트를 활용한 결제 시스템 구현
                           </li>
                           <li>
                             다음 포스트코드를 활용한 주소 등록 및 조회
                           </li>
                           <li>
                             카카오 지도 API를 활용한 위치 기능 구현
-                          </li>
-                          <li>
-                            아임 포트를 활용한 결제 시스템 구현
                           </li>
                           <li>
                             Docker 및 GCP 배포
