--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                         </a>
                       </li>
                       <li class="list-contribution-item">
-                        <i class="fas fa-comment"> 기능 GIF </i>
+                        <i class="fas fa-comment"> 포트폴리오 URL </i>
                         <a
                           href="https://holly-legume-3d3.notion.site/Youth-Luxury-453b45f6c5a946569d4695218a6355f9"
                           target="_blank"
@@ -394,7 +394,7 @@
                         </a>
                       </li>
                       <li class="list-contribution-item">
-                        <i class="fas fa-comment"> 기능 GIF </i>
+                        <i class="fas fa-comment"> 포트폴리오 URL </i>
                         <a
                           href="https://holly-legume-3d3.notion.site/Share-Ground-8203bac3918e4e68a151886fff65e60a"
                           target="_blank"
