--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <button class="stack-item">TypeScript</button>
                   </li>
                   <li class="col-item">
-                    <button class="stack-item">ReactJS</button>
+                    <button class="stack-item">React</button>
                   </li>
                   <li class="col-item">
                     <button class="stack-item">Next.js</button>
@@ -130,7 +130,7 @@
                     <button class="stack-item">Context-API</button>
                   </li>
                   <li class="col-item">
-                    <button class="stack-item">Graph-ql</button>
+                    <button class="stack-item">GraphQL</button>
                   </li>
                   <li class="col-item">
                     <button class="stack-item">restAPI</button>
@@ -140,6 +140,9 @@
                   </li>
                   <li class="col-item">
                     <button class="stack-item">Styled-component</button>
+                  </li>
+                  <li class="col-item">
+                    <button class="stack-item">Sass</button>
                   </li>
                   <li class="col-item">
                     <button class="stack-item">Docker</button>
