--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 />
               </div>
               <div class="name">
-                <h1>오늘도 달리는 거북이 <br />개발자 권지현입니다.</h1>
+                <h1>오늘도 달리는 거북이 개발자 권지현입니다.</h1>
               </div>
               <ul class="contacts">
                 <li class="tel">
