--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                 </li>
               </ul>
               <div class="markdown github markdown-viewer description">
-                <div class="">
-                  <p>
+                <div>
+                  <p class="keep-all">
                     전래동화 토끼와 거북이의 거북이처럼 목표를 이루기 위해
                     느리더라도 꾸준히 한 걸음씩 나아가고 있습니다. 부트캠프 수강 초기에는 블랙홀이라고 불리기도 했지만 두 달 뒤 팀 프로젝트에서 팀장을 맡아 프로젝트를 이끌기도 했습니다. 새로운 기술에 관심이 많아 사이드 프로젝트와 기술 강의 수강을 진행 중입니다.
                   </p>
