--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
                           설명할 수 있는 사람이 진정한 개발자, 프로그래머로
                           성장할 수 있다고 생각합니다.
                         </p>
+                        <p>&nbsp</p>
                       </div>
                     </div>
                   </div>
@@ -262,7 +263,7 @@
                       <li>Next.js</li>
                       <li>JavaScript</li>
                       <li>TypeScript</li>
-                      <li>Graph-ql</li>
+                      <li>GraphQL</li>
                       <li>Emotion</li>
                       <li>Git</li>
                       <li>GitHub</li>
@@ -335,7 +336,7 @@
                       <li>Next.js</li>
                       <li>JavaScript</li>
                       <li>TypeScript</li>
-                      <li>Graph-ql</li>
+                      <li>GraphQL</li>
                       <li>Axios</li>
                       <li>Emotion</li>
                       <li>Git</li>
