--- a/skill.html
+++ b/skill.html
@@ -72,7 +72,7 @@
                         <li class="tag">Next.js</li>
                         <li class="tag">JavaScript</li>
                         <li class="tag">TypeScript</li>
-                        <li class="tag">Graph-ql</li>
+                        <li class="tag">GraphQL</li>
                         <li class="tag">Axios</li>
                         <li class="tag">Emotion</li>
                         <li class="tag">Git</li>
@@ -125,7 +125,7 @@
                         <li class="tag">Next.js</li>
                         <li class="tag">JavaScript</li>
                         <li class="tag">TypeScript</li>
-                        <li class="tag">Graph-ql</li>
+                        <li class="tag">GraphQL</li>
                         <li class="tag">Axios</li>
                         <li class="tag">Emotion</li>
                         <li class="tag">Git</li>
