--- a/skill.html
+++ b/skill.html
@@ -62,9 +62,9 @@
                       <h4 class="title">Youth & Luxury 명품 중고마켓</h4>
                       <div class="markdown github">
                         <p> GraphQL을 활용한 서버와의 데이터 통신 </p>
-                        <p> 사용자 신뢰를 위한 실계좌 조회 OPEN-API 적용 </p>
-                        <p> 다음 포스트코드를 활용한 주소 등록 및 조회 </p>
-                        <p> 아임 포트를 활용한 결제 시스템 구현 </p>
+                        <p> 실계좌 조회 및 카카오 링크 API 활용</p>
+                        <p> 아임포트를 활용한 결제 기능 구현</p>
+                        <p> ant-design, slick, 다음 포스트코드 등의 라이브러리 활용 </p>
                       </div>
                       <ul class="tags">
                         <li class="tag">React</li>
@@ -76,8 +76,6 @@
                         <li class="tag">Emotion</li>
                         <li class="tag">Git</li>
                         <li class="tag">GitHub</li>
-                        <li class="tag">GCP</li>
-                        <li class="tag">Docker</li>
                       </ul>
                     </div>
                   </a>
@@ -106,14 +104,10 @@
                         <p>
                           Debounce, Query Parameter 활용한 검색 기능 구현
                         </p>
+                        <p> Iamport를 활용한 결제 기능 구현</p>
+                        <p> ant-design, slick, 다음 포스트코드 등의 라이브러리 활용 </p>
                         <p>
-                          다음 포스트코드를 활용한 주소 등록 및 조회
-                        </p>
-                        <p>
-                          카카오 지도 API를 활용한 위치 기능 구현
-                        </p>
-                        <p>
-                          아임 포트를 활용한 결제 시스템 구현
+                          아임포트를 활용한 결제 시스템 구현
                         </p>
                         <p>
                           Docker 및 GCP 배포
