--- a/index.html
+++ b/index.html
@@ -280,16 +280,14 @@
                             메인 페이지, 상품 상세 페이지, 결제 페이지 제작 담당
                           </li>
                           <li>
-                            아임 포트를 활용한 결제 시스템 구현
-                          </li>
-                          <li>
                             GraphQL을 활용한 서버와의 데이터 통신
                           </li>
+                          <li>실계좌 조회 및 카카오 링크 API 활용</li>
                           <li>
-                            다음 포스트코드를 활용한 주소 등록 및 조회
+                            아임포트를 활용한 결제 기능 구현
                           </li>
                           <li>
-                            상품 상세 페이지 SNS(카카오톡) 공유 기능 구현
+                            ant-design, slick, 다음 포스트코드 등의 라이브러리 활용
                           </li>
                         </ul>
                       </div>
@@ -354,19 +352,11 @@
                             Debounce, Query Parameter 활용한 검색 기능 구현
                           </li>
                           <li>
-                            GraphQL을 활용한 서버와의 데이터 통신
+                            Axios, GraphQL을 활용한 서버와의 데이터 통신
                           </li>
+                          <li>ant-design, slick, 다음 포스트코드 등의 라이브러리 활용</li>
                           <li>
-                            무한 스크롤, pagination을 이용한 데이터 조회
-                          </li>
-                          <li>
-                            아임 포트를 활용한 결제 시스템 구현
-                          </li>
-                          <li>
-                            다음 포스트코드를 활용한 주소 등록 및 조회
-                          </li>
-                          <li>
-                            카카오 지도 API를 활용한 위치 기능 구현
+                            아임포트를 활용한 결제 시스템 구현
                           </li>
                           <li>
                             Docker 및 GCP 배포
