--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ko" xml:lang="ko" xmlns="http://www.w3.org/1999/xhtml" translate="">
   <head>
     <meta charset="utf-8" />
-    <title>오늘도 달리는 거북이 개발자 권지현입니다.</title>
+    <title>오늘도 한 걸음 나아가는 거북이 개발자 권지현입니다.</title>
     <link rel="stylesheet" media="all" href="style1.css" />
     <link rel="stylesheet" media="all" href="style2.css" />
     <link rel="stylesheet" media="all" href="library.css" />
@@ -54,7 +54,7 @@
                 />
               </div>
               <div class="name">
-                <h1>오늘도 달리는 거북이 개발자 권지현입니다.</h1>
+                <h1>오늘도 한 걸음 나아가는 프론트엔드 개발자 권지현입니다.</h1>
               </div>
               <ul class="contacts">
                 <li class="tel">
@@ -88,7 +88,8 @@
                 <div>
                   <p class="keep-all">
                     전래동화 토끼와 거북이의 거북이처럼 목표를 이루기 위해
-                    느리더라도 꾸준히 한 걸음씩 나아가고 있습니다. 부트캠프 수강 초기에는 블랙홀이라고 불리기도 했지만 두 달 뒤 팀 프로젝트에서 팀장을 맡아 프로젝트를 이끌기도 했습니다. 새로운 기술에 관심이 많아 사이드 프로젝트와 기술 강의 수강을 진행 중입니다.
+                    느리더라도 꾸준히 한 걸음씩 나아가고 있습니다. 부트캠프 수강 초기에는 블랙홀이라고 불리기도 했지만 두 달 뒤 팀 프로젝트에서 팀장을 맡아 프로젝트를 이끌기도 했습니다.
+                    현재는 개인 프로젝트에서 컴포넌트 세분화와 GraphQL의 장점을 최대한 활용한 코드를 짜기 위해 공부 중입니다.
                   </p>
                 </div>
               </div>
@@ -273,22 +274,19 @@
                     <h5 class="resume-card-item-text">
                       젊은 층에서 명품 소비가 늘어남에 따라 명품에 대한 진입 장벽을 낮추어 명품을 친근하게 거래할 수 있도록 만든 서비스
                     </h5>
+                    <br />
                     <div class="markdown github markdown-viewer">
                       <div>
                         <ul style="list-style-type: circle">
+                          <li>react-slick 라이브러리를 이용한 이미지 전환</li>
+                          <li>GraphQL을 활용한 서버와의 데이터 통신</li>
                           <li>
-                            메인 페이지, 상품 상세 페이지, 결제 페이지 제작 담당
+                            메인 페이지 ― 가입을 위해 setTimeout, 정규표현식으로 기본 입력 제한 및 검증
                           </li>
                           <li>
-                            GraphQL을 활용한 서버와의 데이터 통신
+                            상품 상세 페이지, 결제 페이지 ― 아임포트를 활용한 결제 시스템 구현, 다음 포스트코드를 이용한 주소 등록, 조회
                           </li>
                           <li>실계좌 조회 및 카카오 링크 API 활용</li>
-                          <li>
-                            아임포트를 활용한 결제 기능 구현
-                          </li>
-                          <li>
-                            ant-design, slick, 다음 포스트코드 등의 라이브러리 활용
-                          </li>
                         </ul>
                       </div>
                     </div>
@@ -320,7 +318,7 @@
                 </div>
                 <div class="resume-card-item project">
                   <div class="resume-card-left">
-                    <h5 class="resume-card-item-period">2021-01~2021-03</h5>
+                    <h5 class="resume-card-item-period">2022-01 ~</h5>
                   </div>
                   <div class="resume-card-right">
                     <h4 class="resume-card-item-label">
@@ -340,13 +338,17 @@
                       <li>Docker</li>
                     </ul>
                     <h5 class="resume-card-item-text">
-                      게시판 CRUD, 중고 마켓 CRUD 기능 구현을 기반으로 한 개인 프로젝트
+                      웹 에어비앤비 UI를 클론하고 유저들의 자유 커뮤니티를 컨셉으로 개인 프로젝트
                     </h5>
+                    <h5 class="resume-card-item-text">
+                      유저들끼리 자유롭게 소통할 수 있는 커뮤니티를 제공하고 가입 회원들간 중고 거래가 가능하도록 구현했습니다.
+                    </h5>
+                    <br />
                     <div class="markdown github markdown-viewer">
                       <div>
                         <ul style="list-style-type: circle">
                           <li>
-                            JWT token을 이용한 로그인 및 권한 분기
+                            AccessToken, refreshToken으로 일정 기간동안 로그인 유지 및 권한 분기
                           </li>
                           <li>
                             Debounce, Query Parameter 활용한 검색 기능 구현
@@ -366,15 +368,6 @@
                       </div>
                     </div>
                     <ul class="list-contributions">
-                      <li class="list-contribution-item">
-                        <i class="fas fa-desktop"></i>
-                        <a
-                          href="https://www.hyunswork.shop"
-                          target="_blank"
-                          rel="noopener"
-                          >https://www.hyunswork.shop
-                        </a>
-                      </li>
                       <li class="list-contribution-item">
                         <i class="fab fa-github"></i>
                         <a
@@ -473,12 +466,12 @@
                     <ul class="list-contributions">
                       <li class="list-contribution-item">
                         <h5 class="part-title">
-                          최신 기술을 활용한 사이드 프로젝트 진행
+                          Nomadcoder 바닐라 JS로 크롬 앱 클론 강의 수강
                         </h5>
                       </li>
                       <li class="list-contribution-item">
                         <h5 class="part-title">
-                          Nomard Coder 초보자를 위한 리덕스 101 강의 수강
+                          Nomadcoder 초보자를 위한 리덕스 101 강의 수강
                         </h5>
                       </li>
                       <li class="list-contribution-item">
