--- a/skill.html
+++ b/skill.html
@@ -7,7 +7,7 @@
   translate=""
 >
   <head>
-    <title>오늘도 달리는 거북이 개발자 권지현입니다.</title>
+    <title>오늘도 한 걸음 나아가는 거북이 개발자 권지현입니다.</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" media="all" href="./app.css" />
     <link rel="stylesheet" media="all" href="./library.css" />
@@ -62,9 +62,9 @@
                       <h4 class="title">Youth & Luxury 명품 중고마켓</h4>
                       <div class="markdown github">
                         <p> GraphQL을 활용한 서버와의 데이터 통신 </p>
-                        <p> 실계좌 조회 및 카카오 링크 API 활용</p>
-                        <p> 아임포트를 활용한 결제 기능 구현</p>
-                        <p> ant-design, slick, 다음 포스트코드 등의 라이브러리 활용 </p>
+                        <p> 아임포트를 활용한 결제 시스템 구현, 다음 포스트코드를 이용한 주소 등록, 조회</p>
+                        <p> react-slick 라이브러리를 이용한 이미지 전환</p>
+                        <p> 가입을 위해 setTimeout, 정규표현식으로 기본 입력 제한 및 검증 </p>
                       </div>
                       <ul class="tags">
                         <li class="tag">React</li>
@@ -100,11 +100,11 @@
                       </span>
                       <h4 class="title">Share Ground - 자유 게시판, 중고 마켓</h4>
                       <div class="markdown github">
-                        <p>JWT token을 이용한 로그인 및 권한 분기</p>
+                        <p> AccessToken, refreshToken으로 일정 기간동안 로그인 유지 및 권한 분기</p>
                         <p>
                           Debounce, Query Parameter 활용한 검색 기능 구현
                         </p>
-                        <p> Iamport를 활용한 결제 기능 구현</p>
+                        <p> Axios, GraphQL을 활용한 서버와의 데이터 통신</p>
                         <p> ant-design, slick, 다음 포스트코드 등의 라이브러리 활용 </p>
                         <p>
                           아임포트를 활용한 결제 시스템 구현
